--- a/prasadam_website/css/homepage_style.css
+++ b/prasadam_website/css/homepage_style.css
@@ -3,18 +3,16 @@ body {
 	margin: 0;
 	padding: 0;
 	color: #554a46;
-	font-family: "Myriad-Pro";
-	font-size: 13px;
 	line-height: 1.7em; 
 	background-color: #090100;
-	background-image: url(../images/GrassBack.jpg);
+	background-image: url(../images/GrassBack2.jpg);
 	background-position: center top;
 	background-repeat: no-repeat;
 }
 
 @font-face {
-   font-family: myFirstFont;
-   src: url(fonts/MyriadPro-Regular.otf);
+   font-family: 'myFirstFont';
+   src: url(../fonts/MyriadPro-Regular.otf);
 }
 
 h2 {
@@ -22,6 +20,64 @@ position: absolute;
 top:200px;
 left:0;
 width:100%;
+}
+
+
+.large3-circle {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 250px;
+    margin-top: 320px;
+}
+.large2-circle {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 400px;
+    margin-top: 180px;
+}
+.large1-circle {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: 250px;
+    margin-top: 40px;
+}
+
+.small4-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    margin-left:250px;
+    margin-top: 290px;
+}
+
+.small3-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 135px;
+    height: 135px;
+    margin-left: 490px;
+    margin-top: 300px;
+}
+.small2-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-left: 430px;
+    margin-top: 190px;
+}
+
+.small1-circle {
+    position: absolute;
+    border-radius: 50%;
+    width: 125px;
+    height: 125px;
+    margin-left: 300px;
+    margin-top: 75px;
 }
 
 .row {
@@ -33,6 +89,7 @@ width:100%;
 
 #prasadam_header {
 	/*width: 800px; */
+	/*width: auto;*/
 	width:75%;	
 	height: 200px;
 	margin-top: 50px;
@@ -52,9 +109,11 @@ width:100%;
 }
 
 #karma_header {
-	width:61.7%%;
+	/*width:61.7%%;*/
 /*	width: 620px; 
-*/	height: 200px;
+*/	
+	width: auto;
+	height: 200px;
 }
 #shopping_header {
 	width: 200px; 
@@ -66,7 +125,8 @@ width:100%;
 }
 #peace_header {
 	/*width: 620px; */
-	width:61.7%%;
+	/*width:61.7%%;*/
+	width: auto;
 	height: 200px;
 }
 #facebook_header {
@@ -82,15 +142,14 @@ width:100%;
 	height: 200px;
 }
 #roaring_header {
-	width:48.45%;	
+	/*width:48.45%;	*/
 	/*width: 440px; */
+	width: auto;
 	height: 200px;
 }
 
 
-
-
-.orange {
+/*.orange {
 	color: #C60;
 }
 
@@ -160,7 +219,7 @@ cite span {
 	color: #000; 
 }
 
-em { color: #000; }
+em { color: #000; }*/
 
 /*h1, h2, h3, h4, h5, h6 { color: #666; font-weight: normal; }
 h1 { font-size: 34px; margin: 0 0 20px; padding: 5px 0 }
@@ -169,7 +228,7 @@ h3 { font-size: 24px; margin: 0 0 15px; padding: 0; }
 h4 { font-size: 18px; margin: 0 0 15px; padding: 0; }
 h5 { font-size: 16px; margin: 0 0 10px; padding: 0;  }
 h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }*/
-
+/*
 .cleaner { clear: both }
 .h10 { height: 10px }
 .h20 { height: 20px }
@@ -293,11 +352,11 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }*/
 #tooplate_menu ul li a:hover, #tooplate_menu ul .current {
 	color: #333;
 	background: url(../images/tooplate_menu_hover.png) no-repeat;
-}
+}*/
 
 /* end of menu */
 
-#tooplate_middle { 
+/*#tooplate_middle { 
 	clear: both;
 	width: 880px;
 	height: 240px;
@@ -578,4 +637,4 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }*/
 #tooplate_footer a { 
 	color: #786a78; 
 	text-decoration: none; 
-}
+}*/
