--- a/prasadam_website/css/homepage_style.css
+++ b/prasadam_website/css/homepage_style.css
@@ -22,6 +22,23 @@ left:0;
 width:100%;
 }
 
+#white_canvas{
+    margin-left: 175px;
+    width: 79.2%;
+    height: 550px;
+}
+
+#container{
+    /*margin-left: 500px;*/
+    font-family: 'myFirstFont';
+    text-align: justify;
+    line-height: 40px;
+    font-size: 23px;
+    width: 45%;
+    height: 500px;
+    margin-top: 30px;
+    margin-left: 675px;
+}
 
 .large3-circle {
     border-radius: 50%;
